# mcp-GetTodayFutbolMatches-usingIA

./: .gitignore  NUEVAS_FUENTES.md  README.md  claude_config.md  install.sh  probar_nueva_fuente.py  pyproject.toml  requirements.txt  run_server.py  test_scraper.py
src/mcp_partidos/: __init__.py  config.py  models.py  scraper.py  server.py
